[gd_scene load_steps=22 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://server.gd" type="Script" id=2]
[ext_resource path="res://gui/Inter-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/server-line.png" type="Texture" id=4]
[ext_resource path="res://gui/command-line.png" type="Texture" id=5]
[ext_resource path="res://gui/movie-2-line.png" type="Texture" id=6]
[ext_resource path="res://gui/picture-in-picture-exit-line.png" type="Texture" id=7]
[ext_resource path="res://gui/close-circle-line.png" type="Texture" id=8]
[ext_resource path="res://gui/flight-takeoff-line.png" type="Texture" id=9]
[ext_resource path="res://gui/flight-land-line.png" type="Texture" id=10]
[ext_resource path="res://gui/arrow-up-circle-fill.png" type="Texture" id=11]
[ext_resource path="res://gui/arrow-go-back-line.png" type="Texture" id=12]
[ext_resource path="res://gui/arrow-go-forward-line.png" type="Texture" id=13]
[ext_resource path="res://gui/arrow-down-circle-fill.png" type="Texture" id=14]
[ext_resource path="res://gui/arrow-up-line.png" type="Texture" id=15]
[ext_resource path="res://gui/arrow-left-line.png" type="Texture" id=16]
[ext_resource path="res://gui/arrow-right-line.png" type="Texture" id=17]
[ext_resource path="res://gui/arrow-down-line.png" type="Texture" id=18]
[ext_resource path="res://gui/battery-line.png" type="Texture" id=19]
[ext_resource path="res://gui/base-station-line.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -6
extra_spacing_bottom = -6
font_data = ExtResource( 3 )

[node name="Dashboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
__meta__ = {
"_edit_lock_": true
}

[node name="txt_title" type="Label" parent="main"]
margin_right = 1024.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 1 )
text = "Godotello"
align = 1
valign = 1

[node name="txt_title2" type="Label" parent="main/txt_title"]
margin_top = 43.0
margin_right = 1024.0
margin_bottom = 63.0
text = "by P1X"
align = 1
valign = 1

[node name="system" type="HBoxContainer" parent="main"]
editor/display_folded = true
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 32
alignment = 1

[node name="btn_start_server" type="Button" parent="main/system"]
margin_left = 139.0
margin_right = 271.0
margin_bottom = 32.0
text = "Start Server"
icon = ExtResource( 4 )

[node name="btn_command" type="Button" parent="main/system"]
margin_left = 303.0
margin_right = 419.0
margin_bottom = 32.0
disabled = true
text = "Command"
icon = ExtResource( 5 )

[node name="btn_streamon" type="Button" parent="main/system"]
margin_left = 451.0
margin_right = 575.0
margin_bottom = 32.0
disabled = true
text = "Stream ON"
icon = ExtResource( 6 )

[node name="btn_show stream" type="Button" parent="main/system"]
margin_left = 607.0
margin_right = 784.0
margin_bottom = 32.0
disabled = true
text = "Pop Stream Window"
icon = ExtResource( 7 )

[node name="btn_quit" type="Button" parent="main/system"]
margin_left = 816.0
margin_right = 885.0
margin_bottom = 32.0
text = "Quit"
icon = ExtResource( 8 )

[node name="auto" type="HBoxContainer" parent="main"]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 16
alignment = 1

[node name="btn_takeoff" type="Button" parent="main/auto"]
margin_left = 429.0
margin_right = 469.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
disabled = true
icon = ExtResource( 9 )

[node name="btn_stop" type="Button" parent="main/auto"]
margin_left = 485.0
margin_right = 539.0
margin_bottom = 40.0
disabled = true
text = "STOP"

[node name="btn_land" type="Button" parent="main/auto"]
margin_left = 555.0
margin_right = 595.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
disabled = true
icon = ExtResource( 10 )

[node name="controlls" type="HBoxContainer" parent="main"]
margin_top = 184.0
margin_right = 1024.0
margin_bottom = 440.0
custom_constants/separation = 16
alignment = 1

[node name="nav_left" type="VBoxContainer" parent="main/controlls"]
editor/display_folded = true
margin_left = 86.0
margin_right = 176.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
custom_constants/separation = 32
alignment = 1

[node name="right_stick" type="VBoxContainer" parent="main/controlls/nav_left"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 204.0
custom_constants/separation = 16

[node name="center" type="CenterContainer" parent="main/controlls/nav_left/right_stick"]
margin_right = 90.0
margin_bottom = 40.0

[node name="btn_up" type="Button" parent="main/controlls/nav_left/right_stick/center"]
margin_left = 25.0
margin_right = 65.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 11 )

[node name="vertical" type="HBoxContainer" parent="main/controlls/nav_left/right_stick"]
margin_top = 56.0
margin_right = 90.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 10
alignment = 1

[node name="btn_ccw" type="Button" parent="main/controlls/nav_left/right_stick/vertical"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 12 )

[node name="btn_cw" type="Button" parent="main/controlls/nav_left/right_stick/vertical"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 13 )

[node name="center2" type="CenterContainer" parent="main/controlls/nav_left/right_stick"]
margin_top = 112.0
margin_right = 90.0
margin_bottom = 152.0

[node name="btn_down" type="Button" parent="main/controlls/nav_left/right_stick/center2"]
margin_left = 25.0
margin_right = 65.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 14 )

[node name="log" type="Control" parent="main/controlls"]
margin_left = 192.0
margin_right = 832.0
margin_bottom = 256.0
rect_min_size = Vector2( 640, 0 )

[node name="txt_log" type="RichTextLabel" parent="main/controlls/log"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "FLIGHT LOG:"
scroll_active = false
scroll_following = true

[node name="nav_right" type="VBoxContainer" parent="main/controlls"]
editor/display_folded = true
margin_left = 848.0
margin_right = 938.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
custom_constants/separation = 32
alignment = 1

[node name="right_stick" type="VBoxContainer" parent="main/controlls/nav_right"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 204.0
custom_constants/separation = 16

[node name="center" type="CenterContainer" parent="main/controlls/nav_right/right_stick"]
margin_right = 90.0
margin_bottom = 40.0

[node name="btn_forward" type="Button" parent="main/controlls/nav_right/right_stick/center"]
margin_left = 25.0
margin_right = 65.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 15 )

[node name="vertical" type="HBoxContainer" parent="main/controlls/nav_right/right_stick"]
margin_top = 56.0
margin_right = 90.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 10
alignment = 1

[node name="btn_left" type="Button" parent="main/controlls/nav_right/right_stick/vertical"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 16 )

[node name="btn_right" type="Button" parent="main/controlls/nav_right/right_stick/vertical"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 17 )

[node name="center2" type="CenterContainer" parent="main/controlls/nav_right/right_stick"]
margin_top = 112.0
margin_right = 90.0
margin_bottom = 152.0

[node name="btn_back" type="Button" parent="main/controlls/nav_right/right_stick/center2"]
margin_left = 25.0
margin_right = 65.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 18 )

[node name="sliders" type="HBoxContainer" parent="main"]
margin_top = 456.0
margin_right = 1024.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 64 )
custom_constants/separation = 64
alignment = 1

[node name="distance_deg" type="HBoxContainer" parent="main/sliders"]
editor/display_folded = true
margin_left = 113.0
margin_right = 366.0
margin_bottom = 64.0

[node name="txt_distance_deg2" type="Label" parent="main/sliders/distance_deg"]
margin_top = 23.0
margin_right = 74.0
margin_bottom = 41.0
text = "ROTATION:"

[node name="sli_distance_deg" type="HSlider" parent="main/sliders/distance_deg"]
margin_left = 78.0
margin_right = 174.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 64 )
max_value = 360.0
value = 45.0

[node name="txt_distance_deg" type="Label" parent="main/sliders/distance_deg"]
margin_left = 178.0
margin_top = 23.0
margin_right = 253.0
margin_bottom = 41.0
text = "45 degress"

[node name="speed" type="HBoxContainer" parent="main/sliders"]
editor/display_folded = true
margin_left = 430.0
margin_right = 631.0
margin_bottom = 64.0

[node name="txt_speed2" type="Label" parent="main/sliders/speed"]
margin_top = 23.0
margin_right = 47.0
margin_bottom = 41.0
text = "SPEED:"

[node name="sli_speed" type="HSlider" parent="main/sliders/speed"]
margin_left = 51.0
margin_right = 147.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 64 )
min_value = 10.0
value = 10.0

[node name="txt_speed" type="Label" parent="main/sliders/speed"]
margin_left = 151.0
margin_top = 23.0
margin_right = 201.0
margin_bottom = 41.0
text = "10 cm/s"

[node name="distance" type="HBoxContainer" parent="main/sliders"]
editor/display_folded = true
margin_left = 695.0
margin_right = 910.0
margin_bottom = 64.0

[node name="txt_distance2" type="Label" parent="main/sliders/distance"]
margin_top = 23.0
margin_right = 71.0
margin_bottom = 41.0
text = "DISTANCE:"

[node name="sli_distance" type="HSlider" parent="main/sliders/distance"]
margin_left = 75.0
margin_right = 171.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 64 )
min_value = 20.0
max_value = 500.0
value = 20.0

[node name="txt_distance" type="Label" parent="main/sliders/distance"]
margin_left = 175.0
margin_top = 23.0
margin_right = 215.0
margin_bottom = 41.0
text = "20 cm"

[node name="battery" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 87.0
margin_bottom = 50.0
text = "100%"
icon = ExtResource( 19 )

[node name="link_strength" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -87.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 50.0
text = "70db"
icon = ExtResource( 20 )
[connection signal="button_down" from="main/system/btn_start_server" to="." method="_on_btn_start_server_button_down"]
[connection signal="button_down" from="main/system/btn_command" to="." method="_on_btn_command_button_down"]
[connection signal="button_down" from="main/system/btn_streamon" to="." method="_on_btn_streamon_button_down"]
[connection signal="button_down" from="main/system/btn_show stream" to="." method="_on_btn_show_stream_button_down"]
[connection signal="button_down" from="main/system/btn_quit" to="." method="_on_btn_quit_button_down"]
[connection signal="button_down" from="main/auto/btn_takeoff" to="." method="_on_btn_takeoff_button_down"]
[connection signal="button_down" from="main/auto/btn_stop" to="." method="_on_btn_stop_button_down"]
[connection signal="button_down" from="main/auto/btn_land" to="." method="_on_btn_land_button_down"]
[connection signal="button_down" from="main/controlls/nav_left/right_stick/center/btn_up" to="." method="_on_btn_up_button_down"]
[connection signal="button_down" from="main/controlls/nav_left/right_stick/vertical/btn_ccw" to="." method="_on_btn_ccw_button_down"]
[connection signal="button_down" from="main/controlls/nav_left/right_stick/vertical/btn_cw" to="." method="_on_btn_cw_button_down"]
[connection signal="button_down" from="main/controlls/nav_left/right_stick/center2/btn_down" to="." method="_on_btn_down_button_down"]
[connection signal="button_down" from="main/controlls/nav_right/right_stick/center/btn_forward" to="." method="_on_btn_forward_button_down"]
[connection signal="pressed" from="main/controlls/nav_right/right_stick/center/btn_forward" to="." method="_on_btn_forward_pressed"]
[connection signal="button_down" from="main/controlls/nav_right/right_stick/vertical/btn_left" to="." method="_on_btn_left_button_down"]
[connection signal="button_down" from="main/controlls/nav_right/right_stick/vertical/btn_right" to="." method="_on_btn_right_button_down"]
[connection signal="button_down" from="main/controlls/nav_right/right_stick/center2/btn_back" to="." method="_on_btn_back_button_down"]
[connection signal="value_changed" from="main/sliders/distance_deg/sli_distance_deg" to="." method="_on_sli_distance_deg_value_changed"]
[connection signal="value_changed" from="main/sliders/speed/sli_speed" to="." method="_on_sli_speed_value_changed"]
[connection signal="value_changed" from="main/sliders/distance/sli_distance" to="." method="_on_sli_distance_value_changed"]
